# Autonomous-Vehicle-Control-System

./: CMakeLists.txt  Dockerfile (2)  Makefile  README.md  docker-compose (1).yml  environment (2).yml  package-lock.json  package.json  setup (3).py
C++/: autonomous_core.hpp  lidar_processing.cpp  localization.cpp  localization.hpp  main.cpp  radar_processing (1).cpp  sensor_fusion.cpp  sensor_fusion.hpp  slam_system.cpp  slam_system.hpp  trajectory_tracking.hpp  vehicle_state_estimator.hpp
ai_engine/python/perception/: environment_config (1).yaml  pedestrian_response.py  traffic_sign_detector.py  visualization.py  yolov8_detector.py
ai_engine/python/perception/inference/: batch_inference.py  benchmark.py  config.yaml  edge_inference.py  inference_engine.py  latency_monitor.py  model_loader.py  object_detector (2).py  optimization.py  realtime_inference.py  tensor_rt_integration.py
ai_engine/python/perception/lane_detection/: benchmark (3).py  edge_detection.py  lane_classifier.py  lane_curvature.py  lane_departure_warning.py  lane_detector.py  lane_filter.py  perspective_transform.py  test_lane_detection.py
ai_engine/python/perception/object_detection/: config (6).yaml  detection_utils.py  pedestrian_detector.py  postprocessing.py  preprocessing.py  vehicle_model (1).py  visualization.py
ai_engine/python/perception/semantic_segmentation/: data_loader.py  evaluate.py  lane_segmentation.py  mask_generator.py  metrics.py  obstacle_segmentation.py  postprocessing (1).py  (+4 more)
cybersecurity/encryption/: __init__ (2).py  __init__ (3).py  aes_encryption.py  certificate_manager.py  config (1).py  constants (2).py  data_protection.py  digital_signature.py  ecc_encryption.py  emergency_lockdown.py  encryption.py  firmware_validation.py  hash_functions.py  incident_response.py  key_manager.py  key_rotation.py  rsa_encryption.py  secrets_manager.py
cybersecurity/vehicle_security/: config.py  constants.py  safety_monitor.py  secure_boot.py  secure_storage.py  secure_update.py  security_event_logger.py  software_integrity.py  tamper_detection.py  test_vehicle_security.py  vehicle_firewall.py  vehicle_monitor.py  vehicle_security.py  vulnerability_scanner.py
dataset/camera/highway_driving_image/: annotations.json
dataset/gps/: gps_route_001.gpx  gps_route_002.gpx  navigation_waypoints.json  realtime_gps_log.txt  vehicle_coordinates.csv
dataset/gps/localization_dataset/: highway_route.csv  rural_route.csv  urban_route.csv
dataset/lane_detection_dataset/: lane_labels.csv
dataset/lidar/: 3d_environment_mesh.mtl  lidar_scan_001.pcd  lidar_scan_002.pcd  point_cloud_map.pcd  slam_environment_map.ply
dataset/lidar/lidar_sequence/: metadata.json
dataset/lidar/simantic_lidar/: calibration.yaml  semantic_labels.json  semantic_scan_001.pcd
dataset/radar/: moving_object_detection.json  radar_calibration.yaml  radar_signal_001.csv  radar_signal_002.csv  velocity_tracking_data.csv
docs/: developer_guide.md  installation_guide.md  research_notes.md
docs/Architecture/: system_architecture.md
docs/api_documentation/: api_documentation.md
docs/research_paper/: README (3).md  README (4).md  advanced_robotics_architecture.md  ai_robotics_ethics.md  autonomous_drone_coordination.md  autonomous_fleet_management.md  autonomous_vehicle_ai.md  computer_vision_for_robots.md  deep_learning_for_self_driving.md  digital_twin_vehicles.md  edge_ai_for_vehicles.md  edge_computing_in_robotics.md  embedded_ai_systems.md  future_of_autonomous_transportation.md  intelligent_traffic_management.md  lidar_and_radar_processing.md  multi_agent_robotics.md  neural_network_control_systems.md  next_generation_autonomous_platforms.md  path_planning_algorithms.md  predictive_maintenance_ai.md  quantum_navigation_research.md  reinforcement_learning_navigation.md  ros2_autonomous_systems.md  self_healing_ai_systems.md  sensor_fusion_research.md  simulation_and_digital_testing.md  slam_and_localization.md  smart_transportation_systems.md  v2x_communication_research.md  vehicle_cybersecurity.md  vehicle_dynamics_and_control.md
models/object_detection/: metrics (1).csv  model_config.yaml  object_classes (1).txt  yolov8_vehicle_detector.pt
models/reinforcement_learning/: ppo_agent_weights (1).pt  reward_metrics (2).csv  rl_agent_model (1).pt  training_statistics (1).json
src/c/embedded_system/: diagnostics.c  diagnostics.h  fault_handler.c  fault_handler.h  main.c  main.h  power_management.c  power_management.h  system_init.c  system_init.h  watchdog.c  watchdog.h
src/c/motor_control/: brake_controller.c  brake_controller.h  encoder_reader.c  encoder_reader.h  motor_driver.c  motor_driver.h  pwm_control.c  pwm_control.h  speed_controller.c  speed_controller.h  steering_controller.c  steering_controller.h
src/communication/: behavior_planner.py  lidar_processor.py  sensor_fusion.py
src/control/: __init__ (10).py  __init__ (11).py  __init__ (6).py  __init__ (7).py  __init__ (8).py  __init__ (9).py  camp_processor.py  dsrc_interface.py  message_parser.py  pure_pursuit_controller.py  v2x_node.py
src/javascript/deshboard/: README (8).md  alerts.js  app.js  charts.js  dashboard.js  dashboard_api.js  dashboard_router.js  dashboard_service.js  dashboard_store.js  settings.js  statistics.js  widgets.js
src/javascript/realtime_monitoring/: alert_manager.js  event_logger.js  health_monitor.js  latency_monitor.js  performance_tracker.js  realtime_monitor.js  system_status.js  websocket_client.js  websocket_server.js
src/javascript/telemetry/: sensor_metrics.js  telemetry.js  telemetry_client.js  telemetry_parser.js  telemetry_server.js  telemetry_storage.js  telemetry_stream.js  vehicle_metrics.js
src/javascript/web_visualization/: 3d_scene.js  camera_viewer.js  graph_renderer.js  heatmap_generator.js  lidar_visualizer.js  map_layers.js  radar_visualizer.js  route_visualizer.js  vehicle_map.js
src/localization/: ekf_localizer.py  gps_processor.py  imu_processor.py
src/perception/: object_tracker.py
src/planning/: cost_calculator.py  path_planner.py
src/simulation/: map_manager.py  slam_node.py
(+45 files in other folders)
